--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -35,6 +35,7 @@
       <% @posts.each do |post| %>
         <div id="post">
           <h3><%=post.title %></h3>
+          <h6><%=post.created_at.strftime("%B %d, %Y") %></h6>
           <%= simple_format post.body %>
           <small>
           <%= link_to 'Edit', edit_post_path(post) %>
