--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -47,21 +47,10 @@
       </section> <!-- close left-col -->
 
       <aside class="sidebar">
-         <h4><a href="#">Find Jordan</a></h4>
-          <ul>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Email</a></li>
-        </ul> 
-        <br/>
-        <h4><a href="#">Blogs He Likes</a></h4>
-        <ul>
-          <li><a href="http://crafttaste.com/">Craft Taste</a></li>
-          <li><a href="#">Blog Name</a></li>
-          <li><a href="#">Blog Name</a></li>
-        </ul>
         <br/>
         <div id="untappd" data-id ="<%= @client_id %>" data-secret="<%= @client_secret %>">
-          <p>Untappd Feed Coming Soon!</p>
+          <div id="untappd-logo"></div>
+          <h4><a href="https://untappd.com/user/jh1640/beers">Recent Activity</a></h4>
         </div>
       </aside>
       </div> <!-- end latest -->
