migrated to postgres from mysql for push to heroku

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,7 +50,7 @@
         <br/>
         <div id="untappd" data-id ="<%= @client_id %>" data-secret="<%= @client_secret %>">
           <div id="untappd-logo"></div>
-          <h4><a href="https://untappd.com/user/jh1640/beers">Recent Activity</a></h4>
+          <h4><a href="https://untappd.com/user/jh1640/beers">Recent Brews</a></h4>
         </div>
       </aside>
       </div> <!-- end latest -->
