--- a/app/assets/stylesheets/media-queries.css
+++ b/app/assets/stylesheets/media-queries.css
@@ -1,7 +1,15 @@
 @media screen and (max-width:478px) {
-  h1 {font-size: 70px; padding: 1px;}
-  h2 {font-size: 13px; padding: 1px;}
-  body {font-size: 13px;}
+  h1 { 
+    font-size: 70px; 
+    padding: 1px;
+  }
+  h2 {
+    font-size: 13px; 
+    padding: 1px;
+  }
+  body {
+    font-size: 13px;
+  }
 }
 
 @media screen and (max-width: 740px) {
